--- a/movie_csv_import.ipynb
+++ b/movie_csv_import.ipynb
@@ -495,6 +495,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to a new csv\n",
+    "netflix_file_df_clean.to_csv(\"netflix_data_clean.csv\", header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
