Updated to put API Keys in a separate file

--- a/OMDB API.ipynb
+++ b/OMDB API.ipynb
@@ -174,6 +174,7 @@
     "import numpy as py\n",
     "import requests\n",
     "import json\n",
+    "from config import omdb_api_key\n",
     "\n",
     "csv_file = \"netflix_data_clean.csv\"\n",
     "netflix_file_clean_df = pd.read_csv(csv_file)\n",
@@ -356,12 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#iterate through the titles and add information into list or dictionary\n",
-    "url = \"http://www.omdbapi.com/?apikey=trilogy&t=\"\n",
+    "url = f\"http://www.omdbapi.com/?apikey={omdb_api_key}&t=\"\n",
     "titles = netflix_file_clean_df[\"title\"]\n",
     "movie_name = []\n",
     "genre = []\n",
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
