--- a/zzz Archive and Scratch/OMDB API.ipynb
+++ b/zzz Archive and Scratch/OMDB API.ipynb
@@ -639,7 +639,10 @@
     "# remove any results where the title was na\n",
     "omdb_data_clean = omdb_data\n",
     "omdb_data_clean = omdb_data_clean.loc[omdb_data_clean[\"title\"]!= 'na']\n",
-    "omdb_data_clean.info()"
+    "omdb_data_clean.head(2)\n",
+    "\n",
+    "# save to csv\n",
+    "omdb_data_clean.to_csv(\"Resources/omdb_data_clean.csv\", index=True)"
    ]
   },
   {
@@ -647,10 +650,7 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# save to csv\n",
-    "omdb_data_clean.to_csv(\"omdb_data_clean.csv\", index=True)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
