--- a/zzz Archive and Scratch/TheMovieDatabase API.ipynb
+++ b/zzz Archive and Scratch/TheMovieDatabase API.ipynb
@@ -178,7 +178,7 @@
     "\n",
     "csv_file = \"netflix_data_clean.csv\"\n",
     "netflix_file_clean_df = pd.read_csv(csv_file)\n",
-    "netflix_file_clean_df.head()"
+    "netflix_file_df_clean.head(2)"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "url = f\"https://api.themoviedb.org/3/search/movie?api_key={tmdb_api_key}&query=\"\n",
-    "titles = netflix_file_clean_df[\"title\"]\n",
+    "titles = netflix_file_df_clean[\"title\"]\n",
     "movie_name = []\n",
     "original_title = []\n",
     "popularity = []\n",
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
